# tauri-tailwind

./: ARCHITECTURE_CLEANUP_SUMMARY.md  ARCHITECTURE_TEST_RESULTS.md  AUTH_INFO_STRUCTURE.md  BAILEYS_AUTH_SESSION_TEST_PLAN.md  BAILEYS_CONNECTION_STATE_TEST_PLAN.md  BAILEYS_MULTI_DEVICE_IMPLEMENTATION.md  BAILEYS_MULTI_DEVICE_TEST_PLAN.md  BAILEYS_TESTING_README.md  BAILEYS_TEST_QUICK_REFERENCE.md  BUILD.md  CONFIGURATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  INTEGRATION_TEST_CHECKLIST.md  INTEGRATION_TEST_EXECUTION_GUIDE.md  INTEGRATION_TEST_PLAN.md  LOG_LEVEL_CONFIGURATION.md  MANUAL_TESTING_GUIDE.md  MIGRATION.md  PERFORMANCE_VERIFICATION_REPORT.md  PRODUCTION.md  QR_CODE_FIX_SUMMARY.md  README.md  TASK_10_COMPLETION_SUMMARY.md  TASK_11_GROUP_OPERATIONS_TEST_SUMMARY.md  TASK_13_ERROR_HANDLING_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_14_ERROR_HANDLING_SUMMARY.md  TASK_14_UI_POLISH_SUMMARY.md  TASK_15_MULTI_DEVICE_VERIFICATION_SUMMARY.md  TASK_16_INTEGRATION_TEST_SUMMARY.md  TASK_16_SUMMARY.md  TASK_16_VERIFICATION_SUMMARY.md  eslint.config.js  package.json
.kiro/steering/: product.md  (+2 more)
scripts/: integration-test.ps1  pre-build.js  verify-auth-session.ps1  verify-performance.js
src/: main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/automation/: executor.rs  mod.rs  storage.rs
src-tauri/src/connection/: error.rs  manager.rs  mod.rs
src-tauri/src/logging/: logger.rs  mod.rs
src-tauri/src/whatsapp/: client.rs  mod.rs  types.rs
src-tauri/whatsapp-node/: .gitignore  ERROR_HANDLING_TEST_RESULTS.md  README.md  TESTING_QUICK_START.md  TEST_GROUP_OPERATIONS.md  index.js  package-lock.json  package.json  test-error-handling.js  test-group-operations-automated.js  test-group-operations.js
src-tauri/whatsapp-node/operations/: addToGroup.js  extractMembers.js  getGroups.js
(+87 files in other folders)
