[package]
name = "whatsapp-automation"
version = "1.0.0"
description = "WhatsApp Automation Desktop Application - Manage groups, extract members, and automate WhatsApp operations"
authors = ["WhatsApp Automation Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/whatsapp-automation"
homepage = "https://github.com/yourusername/whatsapp-automation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
